syntax = "proto3";

package auth.auth;


import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "auth.auth";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  schemes: HTTPS;
  host: "api.zuoyinyun.com";
};

service AuthService {
  rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse) {
    option (google.api.http) = {
      get: "/auth.auth.AuthService/authorize"
    };
  }
  rpc Token(TokenRequest) returns (TokenResponse) {
    option (google.api.http) = {
      post: "/auth.auth.AuthService/token",
      body: "*"
    };
  }
  rpc Resource(ResourceRequest) returns (ResourceResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}

  rpc ClientList(ClientListRequest) returns (ClientListResponse) {}
  rpc ClientCreate(ClientCreateRequest) returns (ClientCreateResponse) {}
  rpc ConfigList(ConfigListRequest) returns (ConfigListResponse) {}
  rpc ConfigCreate(ConfigCreateRequest) returns (ConfigCreateResponse) {}
}

message Resource {
  int32 id = 1;
  string user_id = 2;
  string client_id = 3;
  string access_token = 4;
  string refresh_token = 5;
  string scope = 6;
  string token_type = 7;
  google.protobuf.Timestamp until = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message NewResource {
  string user_id = 1;
  string client_id = 2;
  string access_token = 3;
  string refresh_token = 4;
  string scope = 5;
  string token_type = 6;
  google.protobuf.Timestamp until = 7;
}

message Token {
  string access_token = 1;
  string refresh_token = 2;
  string scope = 3;
  string token_type = 4;
  int32 expires_in = 5;
}


message AuthorizeRequest {
  string client_id = 1;
  string response_type = 2;
  optional string redirect_uri = 3;
}
message AuthorizeResponse {
  string code = 1;
}
message TokenRequest {
  string code = 1;
}
message TokenResponse {
  Token token = 1;
}
message ResourceRequest {
  string access_token = 1;
  string uri = 2;
}
message ResourceResponse {
  string owner_id = 1;
  string client_id = 2;
  string scope = 3;
  google.protobuf.Timestamp until = 4;
}

message User {
  string id = 1; // id11
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
}

message LoginRequest {
  string user_id = 1;
}
message LoginResponse {
  User user = 1;
  Token token = 2;
}

message RegisterRequest {
}
message RegisterResponse {
  User user = 1;
  Token token = 2;
}


// client
message Client {
  string id = 1;
  string name = 2;
  string redirect_uri = 3;
  string default_scope = 4;
  optional string passdata = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}
message NewClient {
  string name = 1;
  string redirect_uri = 2;
  string default_scope = 3;
  optional string passdata = 4;
  // oneof client_type {
  //   bool public = 3;
  //   string passdata = 4;
  // }
}

message Pattern {
  oneof pattern {
    string equal = 1;
    string prefix = 2;
    string regex = 3;
  }
}

// url scope config
message Config {
  int32 id = 1;
  Pattern pattern = 2;
  optional string scope = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}
message NewConfig {
  Pattern pattern = 1;
  optional string scope = 2;
}

message ClientListRequest {
}
message ClientListResponse {
  repeated Client clients = 1;
}
message ClientCreateRequest {
  NewClient client = 1;
}
message ClientCreateResponse {
  Client client = 1;
}
message ConfigListRequest {
}
message ConfigListResponse {
  repeated Config configs = 1;
}
message ConfigCreateRequest {
  NewConfig config = 1;
}
message ConfigCreateResponse {
  Config config = 1;
}